--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- REQUIRED: Page Title -->
-    <title>Analyn's Portfolio</title>
+    <title>UHWO ART320 Fall 2024 Portfolio</title>
 
     <!-- REQUIRED: Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,7 +27,7 @@
     <!-- Start of Header Section -->
     <header class="">
         <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
-            <a class="navbar-brand" href="#">Analyn</a>
+            <a class="navbar-brand" href="#">ART320 Fall 2024</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,8 @@
                 <div class="col ">
                     <h1 class="display-1">Bold ideas, <br>
                         real outcomes.</h1>
-                    <h2>Analyn Delos Santos, <br>
-                        Product UX/UI Designer</h2>
+                    <h2>ART 320<br>
+                        Fall 2024</h2>
                 </div>
             </div>
         </div>
@@ -66,11 +66,11 @@
                 <div class="col">
                     <a href="">
                         <div class="card project-card">
-                            <img src="images/thumbnail-usaf.png" class="card-img-top"
-                                alt="Thumbnail of US Air Force Project">
+                            <img src="images/thumbnail-1.png" class="card-img-top"
+                                alt="Thumbnail">
                             <div class="card-body">
-                                <p class="kicker">US Air Force</p>
-                                <h2 class="card-title">Modernizing manual Air Force processes and legacy systems</h2>
+                                <p class="kicker">Project Title</p>
+                                <h2 class="card-title">Project detail goes here</h2>
                             </div>
                         </div>
                     </a>
@@ -80,11 +80,11 @@
                 <div class="col">
                     <a href="">
                         <div class="card project-card">
-                            <img src="images/thumbnail-accuity.png" class="card-img-top"
-                                alt="Thumbnail of Accuity Project">
+                            <img src="images/thumbnail-2.png" class="card-img-top"
+                                alt="Thumbnail">
                             <div class="card-body">
-                                <p class="kicker">Accuity</p>
-                                <h2 class="card-title">Helping an evolving accounting firm attract top talent</h2>
+                                <p class="kicker">Project Title</p>
+                                <h2 class="card-title">Project detail goes here</h2>
                             </div>
                         </div>
                     </a>
@@ -94,11 +94,11 @@
                 <div class="col">
                     <a href="/zippys.html">
                         <div class="card project-card">
-                            <img src="images/thumbnail-zippys.png" class="card-img-top"
-                                alt="Thumbnail of Zippy's Project">
+                            <img src="images/thumbnail-3.png" class="card-img-top"
+                                alt="Thumbnail">
                             <div class="card-body">
-                                <p class="kicker">Zippy's</p>
-                                <h2 class="card-title">Launching online ordering at Hawaii's favorite diner</h2>
+                                <p class="kicker">Project Title</p>
+                                <h2 class="card-title">Project detail goes here</h2>
                             </div>
                         </div>
                     </a>
@@ -114,7 +114,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-xs col-lg-6">
-                    <h2 class="display-2 mb-4">About Me</h2>
+                    <h2 class="display-2 mb-4">About</h2>
                     <p>About me lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
